termino grid tarea 3

--- a/practica 3 grid/index.html
+++ b/practica 3 grid/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BieneRaices.com</title>
-    <link rel="stylesheet" href="./dist/css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -115,38 +115,48 @@
     <footer>
         <div class="menuF conteiner">
             <div>
-                <h3>Nosotros</h3>
+                <h3 class="titulF">Nosotros</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, quas!</p>
             </div>
             <div>
-                <h3>Navegación</h3>
+                <h3 class="titulF">Navegación</h3>
                 <ul>
-                    <il>Nosotros</il>
-                    <il>Casas</il>
-                    <il>Contacto</il>
+                    <li><a href="#nosotros">Nosotros</a></li>
+                    <li><a href="#casas">Casas</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </div>
             <div>
-                <h3>Casas a la Venta</h3>
-                <div>
-                    <img src="./img/casa2.jpg" alt="Imagen Casa 2">
-                    <h4>Cassa 2</h4>
-                    <p>€2,000,000</p>
-                </div>
-                <div>
-                    <img src="./img/casa3.jpg" alt="Imagen Casa 3">
-                    <h4>Cassa 3</h4>
-                    <p>€2,000,000</p>
-                </div>
-                <div>
-                    <img src="./img/casa4.jpg" alt="Imagen Casa 4">
-                    <h4>Cassa 4</h4>
-                    <p>€2,000,000</p>
-                </div>
-                <div>
-                    <img src="./img/casa5.jpg" alt="Imagen Casa 15">
-                    <h4>Cassa 5</h4>
-                    <p>€2,000,000</p>
+                <h3 class="titulF">Casas a la Venta</h3>
+                <div class="fatherArticlesF">
+                    <div class="articleF">
+                        <img src="./img/casa2.jpg" alt="Imagen Casa 2">
+                        <div class="contenF">
+                            <h4>Cassa 2</h4>
+                            <p>€2,000,000</p>
+                        </div>
+                    </div>
+                    <div class="articleF">
+                        <img src="./img/casa3.jpg" alt="Imagen Casa 3">
+                        <div class="contenF">
+                            <h4>Cassa 3</h4>
+                            <p>€2,000,000</p>
+                        </div>
+                    </div>
+                    <div class="articleF">
+                        <img src="./img/casa4.jpg" alt="Imagen Casa 4">
+                        <div class="contenF">
+                            <h4>Cassa 4</h4>
+                            <p>€2,000,000</p>
+                        </div>
+                    </div>
+                    <div class="articleF">
+                        <img src="./img/casa5.jpg" alt="Imagen Casa 15">
+                        <div class="contenF">
+                            <h4>Cassa 5</h4>
+                            <p>€2,000,000</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
