--- a/Boostrap/Tarea2/index.html
+++ b/Boostrap/Tarea2/index.html
@@ -12,31 +12,32 @@
             <p class="bg-warning m-3 p-2">LogoCorporativo</p>
         </div>
         <div class="bg-warning row justify-content-center align-items-center">
-            <div>
-                <h1 class="">Lorem. ipsum dolor.</h1>
+            <div class="p-5 text-center">
+                <h1>Lorem ipsum dolor.</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                <button>Constacto</button>
+                <button class="btn btn-dark">Contacto</button>
             </div>
         </div>
-        <div class="row">
+        <div class="row m-5">
             <div class="col-md-4">
                 <h2>Titulo 1</h2>
                 <img class="img-fluid" src="./img/pexels-wearelivingart-7702307.jpg" alt="Titulo 1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequatur doloribus cumque ratione consectetur autem, sequi perferendis eius ea nostrum illum minima aliquam possimus sint culpa officia, quam qui at..</p>
+
             </div>
             <div class="col-md-4">
                 <h2>Titulo 2</h2>
                 <img class="img-fluid" src="./img/pexels-wearelivingart-7702307.jpg" alt="Titulo 2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequatur doloribus cumque ratione consectetur autem, sequi perferendis eius ea nostrum illum minima aliquam possimus sint culpa officia, quam qui at..</p>
             </div>
             <div class="col-md-4">
                 <h2>Titulo 3</h2>
                 <img class="img-fluid" src="./img/pexels-wearelivingart-7702307.jpg" alt="Titulo 3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequatur doloribus cumque ratione consectetur autem, sequi perferendis eius ea nostrum illum minima aliquam possimus sint culpa officia, quam qui at..</p>
             </div>
-            <div>
-
-            </div>
+        </div>
+        <div class="row justify-content-center align-items-center bg-dark">
+            <p class="text-white m-0 p-3">Todos Los Derechos Reservados</p>
         </div>
     </div>
 </body>
