--- a/Boostrap/Tarea3/index.html
+++ b/Boostrap/Tarea3/index.html
@@ -2,34 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea 3 Bootstrap</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tarea 3 Bootstrap</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    <header class="bg-primary">
-        <div class="container row">
-            <div>
-                <p>Bootstrap 4!</p>
-            </div>
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="tel:+56555555555">+56 5 5555 5555</a></li>
-                </ul>
-            </nav>
+
+  <header class="bg-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col-auto">
+          <p class="text-white mb-0">Bootstrap 4!</p>
         </div>
-    </header>
+        <!--NAV-->
+        <nav class="navbar navbar-expand-lg">
+          <!--Ul dentr del NAV-->
+          <ul class="navbar-nav">
+
+
+            <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Link</a></li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white" href="#" data-bs-toggle="dropdown">DropDown</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Diseño Web</a></li>
+                <li><a class="dropdown-item" href="#">Marketing</a></li>
+              </ul>
+            </li>
+
+            <li class="nav-item"><a class="nav-link text-white" href="#">+56 5 5555 5555</a></li>
+
+
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+
 </body>
 
 </html>
